# nkl

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: architecture.md  changelog.md
src/: error.rs  main.rs  npx_guard.rs  routes.rs  status.rs
src/certs/: generate.rs  mod.rs  sni.rs  trust.rs
src/cli/: handler.rs  mod.rs
src/config/: mod.rs  tests.rs
src/discover/: mod.rs
src/hosts/: mod.rs  tests.rs
src/pages/: mod.rs  tests.rs
src/proxy/: daemon.rs  handler.rs  handler_tests.rs  mod.rs  server.rs  websocket.rs  websocket_tests.rs
src/run/: framework.rs  mod.rs  tests.rs
src/utils/: mod.rs  tests.rs
