[package]
name = "nkl"
version = "0.1.0"
edition = "2024"
authors = ["nkcore ltd"]
description = "Replace port numbers with stable, named .localhost URLs. For humans and agents."
license = "Apache-2.0"
repository = "https://github.com/nkcore/nkl"
homepage = "https://github.com/nkcore/nkl"
keywords = ["local", "development", "proxy", "localhost"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-server"]

[[bin]]
name = "nkl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
process-wrap = { version = "8", features = ["tokio1"] }
nix = { version = "0.29", features = ["signal", "process", "user", "fs"] }
daemonize = "0.5"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
x509-parser = "0.16"
time = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
